--- a/数据库权限设置.md
+++ b/数据库权限设置.md
@@ -8,7 +8,7 @@ CREATE USER handsomehan IDENTIFIED BY 'qwertyuiop';
 ```
 grant select, update, insert, delete on *.* to handsomehan@"%" indentified by 'qwertyuiop';
 ```
-    所有权限->all privileges;
+    所有权限 -> all privileges
 ### 刷新数据库
 ```
 flush privileges;
@@ -29,6 +29,5 @@ revoke all privileges on *.* to handsomehan@"%" indentified by 'qwertyuiop';
 ```
 ### 用户设置密码
 ```
-// root用户进入
 set password for 'root'@'localhost' = password('414');
 ```
