--- a/未知宽高元素居中.md
+++ b/未知宽高元素居中.md
@@ -71,7 +71,7 @@ table {
 </div>
 ```
 
-## flex
+## 使用 flex
 
 ```css
 #wrap {
@@ -96,3 +96,25 @@ table {
   </div>
 </div>
 ```
+
+## 已知宽高
+
+```css
+#wrap {
+  position: absolute;
+  height: 300px;
+  width: 200px;
+  left: 50%;
+  top: 50%;
+  margin-left: -100px;
+  margin-top: -150px;
+  background: #ccc;
+}
+```
+
+```html
+<div id="wrap">
+  居中
+</div>
+```
+    
