--- a/线性表-顺序表.md
+++ b/线性表-顺序表.md
@@ -11,3 +11,23 @@ n ++; // 表长增 1
 ```
 + 插入 a[i] 需要移动 n - i 个元素
 + T(n) = n - i;(插入）
+
+## 删除
+> 长度为 n 的顺序表中，删除下标为 i 的元素。
+
+```code 
+for(j = i; j < n - i; j ++) a[j] = a[j + 1]; // 左移，抹去 a[i]
+n --; // 表长减 1
+```
++ 删除 a[i] 需要移动 n - 1 - i 个元素
++ T(n) = n - 1 - i;(删除)
+
+## 效率分析
+
++ 在表尾除插/删，最好，时间用量最少， T(n) = O(1)
++ 最坏的情况下，在表头处插/删, i = 0, T(n) = O(n)
++ 平均情况，移动半数表元素, T(n) = O(n)
++ 适用情况
+  + 表长不大
+  + 不做，或很少做删/插操作
+  + 只在表的端点处做删/插操作
