--- a/线性表-顺序表.md
+++ b/线性表-顺序表.md
@@ -1,5 +1,11 @@
 # 顺序表
 
+> 定义：用一组地址连续的存储单元依次存储线性表的数据元素 
+
+```code
+LOC(ai) = LOC(a1) + (i - 1) * l // a1 为线性表的起始位置或基地址
+```
+
 ## 插入
 
 > 长度为 n 的顺序表中，在该表的 i 位置插入一个元素 x 。
