--- a/顺序查找.md
+++ b/顺序查找.md
@@ -19,3 +19,24 @@ return -1;
 ```
 
 + 最坏情况和平均情况：T(n) = O(n)，是效率最低的查找算法
+
+## 带监督元的顺序查找（牺牲空间换取时间）
+
+> a[1] 至 a[n] 存储表元素， 0 作为无效地址
+
+```code 
+int SQ_search(int a[], int x, int n)
+{
+  int i;
+  i = n; // 查找起点
+  a[0] = x;
+  while(a[i] != x)
+  {
+    i --;
+  }
+  return i;
+}
+```
+
++ x 在表中，i 不等于 0
++ x 不在表中 i 等于 0
