--- a/顺序查找.md
+++ b/顺序查找.md
@@ -30,7 +30,7 @@ int SQ_search(int a[], int x, int n)
   int i;
   i = n; // 查找起点
   a[0] = x;
-  while(a[i] != x)
+  while(a[i] != x && i > 0)
   {
     i --;
   }
